--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             class="relative h-full p-6 rounded-3xl backdrop-blur-2xl bg-black/30 shadow-2xl transform hover:scale-[1.02] transition-all duration-700 border border-indigo-500/50 hover:border-indigo-400 flex flex-col justify-center overflow-hidden hover:shadow-[0_0_30px_rgba(99,102,241,0.5)]">
                             <!-- Clock display -->
                             <div
-                                class="text-8xl font-bold mb-4 drop-shadow-2xl tracking-tighter relative perspective-1000">
+                                class="text-9xl font-bold mb-4 drop-shadow-2xl tracking-tighter relative perspective-1000">
                                 <span id="hours"
                                     class="text-white transform hover:rotate-y-12 transition-transform">00</span>
                                 <span class="text-white animate-pulse">:</span>
@@ -144,8 +144,6 @@
                                 <span class="text-white animate-pulse">:</span>
                                 <span id="seconds"
                                     class="text-white transform hover:rotate-y-12 transition-transform">00</span>
-                                <span class="text-white transform hover:rotate-y-12 transition-transform"
-                                    id="ampm">AM</span>
                                 <span class="text-white ml-4 animate-pulse text-4xl">🚂</span>
                             </div>
 
@@ -217,6 +215,9 @@
                             class="relative h-full p-6 rounded-3xl backdrop-blur-2xl bg-white/5 shadow-2xl transform hover:scale-[1.02] transition-all duration-700 border border-green-500/30 hover:border-green-400 flex flex-col justify-center items-center overflow-hidden hover:shadow-[0_0_30px_rgba(34,197,94,0.5)]">
                             <div class="text-9xl font-light transform hover:scale-110 transition-transform">
                                 <span id="display-number" class="text-black">4</span>
+                                <div class="text-2xl font-light mt-4">
+                                    <span class="text-black">Platform</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -278,18 +279,13 @@
             // Clock functionality
             function updateClock() {
                 const now = new Date();
-                let hours = now.getHours();
-                const ampm = hours >= 12 ? 'PM' : 'AM';
-                hours = hours % 12;
-                hours = hours ? hours : 12; // Convert 0 to 12
-                hours = String(hours).padStart(2, '0');
+                const hours = String(now.getHours()).padStart(2, '0');
                 const minutes = String(now.getMinutes()).padStart(2, '0');
                 const seconds = String(now.getSeconds()).padStart(2, '0');
 
                 document.getElementById('hours').textContent = hours;
                 document.getElementById('minutes').textContent = minutes;
                 document.getElementById('seconds').textContent = seconds;
-                document.getElementById('ampm').textContent = ampm;
 
                 const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
                 const newDate = now.toLocaleDateString('en-US', options);
